--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <video src="/img/videos/pexels-cottonbro-9669110.mp4" class="img_carousel d-block" autoplay loop></video>
+              <video src="/img/videos/pexels-pachon-in-motion-15439750-1080x1920-30fps.mp4" class="img_carousel d-block" preload muted autoplay loop></video>
               <div class="carousel-caption d-md-block">
               <div class="caja__textos">
                   <h5 class="title_section1">
@@ -96,7 +96,7 @@
             </div>
             </div>
             <div class="carousel-item">
-              <video src="/img/videos/brazo.mp4" class="img_carousel d-block" autoplay loop></video>
+              <video src="/img/videos/brazozzom.mp4" class="img_carousel d-block" preload muted autoplay loop></video>
               <div class="carousel-caption d-md-block">
                 <div class="caja__textos">
                   <h5 class="title_section1">
@@ -108,7 +108,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <video src="/img/videos/pexels-mart-production-7565887.mp4" class="img_carousel d-block" autoplay loop></video>
+              <video src="/img/videos/pexels-pachon-in-motion-15439756-720x1280-30fps.mp4" class="img_carousel d-block" preload muted autoplay loop></video>
               <div class="carousel-caption d-md-block">
                 <div class="caja__textos">
                   <h5 class="title_section1">
@@ -121,7 +121,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <video src="/img/videos/production ID_4645399.mp4" class="img_carousel d-block" autoplay loop></video>
+              <video src="/img/videos/production ID_4645399.mp4" class="img_carousel d-block" preload muted autoplay loop></video>
               <div class="carousel-caption d-md-block">
                 <div class="caja__textos">
                   <h5 class="title_section1">
@@ -135,36 +135,46 @@
               </div>
             </div>
           </div>
-          <!-- <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev"
-          >
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next"
-          >
-          </button> -->
         </div>
       </section>
       <section id="section-2">
-        <div class="section0" data-aos="zoom-in" data-aos-duration="2000">
-          <h2 class="title title_invert">Animate al cambio</h2>
-          <p class="copy copy_invert">
+        <div class="section0" data-aos="fade" data-aos-duration="2000">
+          <h2 class="title">Animate al cambio</h2>
+          <p class="copy">
           En Veertien, nos enfocamos en satisfacer las necesidades de nuestros
           clientes a través de una comunicación efeiciente,respondemos tus
           necesidades y preocupaciones de manera oportuna y
           efectiva para cumplir con todas las expectativas en cada proyecto.
           </p>
+          <img class="manos" src="/img/manos.png" alt="">
           <div class="title_button_container div_efecto">
             <a href="#" class="title_button">Conoce nuestra filosofía</a>
           </div>
         </div>
-        <div class="section_2">
+        <div class="section0" data-aos="fade-left" data-aos-duration="2000">
+          <h2 class="title">Los precios + competitivos del mercado</h2>
+          <p class="copy">
+          Estamos en la vanguardia en el uso y aplicaciones de IA para mejorar constantemente nuestros servicios y permitirte acceder a servicios de alta calidad a precios modicos
+          </p>
+          <img class="manos" src="/img/manos.png" alt="">
+          <div class="title_button_container div_efecto">
+            <a href="#" class="title_button">Conoce nuestra filosofía</a>
+          </div>
+        </div>
+        <div class="section0" data-aos="fade-right" data-aos-duration="2000">
+          <h2 class="title">Animate al cambio</h2>
+          <p class="copy">
+          En Veertien, nos enfocamos en satisfacer las necesidades de nuestros
+          clientes a través de una comunicación efeiciente,respondemos tus
+          necesidades y preocupaciones de manera oportuna y
+          efectiva para cumplir con todas las expectativas en cada proyecto.
+          </p>
+          <img class="manos" src="/img/manos.png" alt="">
+          <div class="title_button_container div_efecto">
+            <a href="#" class="title_button">Conoce nuestra filosofía</a>
+          </div>
+        </div>
+        <!-- <div class="section_2">
           <h2 class="title">Nuestras skills</h2>
               <p class="copy">
                 Trabajamos con las mejores tecnologías disponibles
@@ -256,10 +266,10 @@
             </div>
           </div>
   
-          </div>
+          </div> -->
         </div>
       </section>
-      <section id="section-3">
+      <!-- <section id="section-3">
         <div class="cards container">
           <div class="widget">
             <div class="widget-container">
@@ -294,23 +304,24 @@
                           <img src="https://images.unsplash.com/photo-1483426319858-713585dbfa43?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80"/>
                   </div>
                 </div>
-                <!--tab-content-wrapper -->
               </div>
             </div>
           </div>
         </div>
       </section>
       <section id="section-4">
-        <h1 class="title">Mobile first</h1>
-        <p class="copy">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui placeat quam soluta neque architecto sit omnis non vero sapiente pariatur.</p>
-        <div class="section2" style="display: inline-block;">
-          <img src="/img/copy/Ch3Recurso 12@2x.png" alt="" class="mockup" data-aos="zoom-in" data-aos-duration="2000">
+        <div class="miDiv">
+          <video autoplay muted loop>
+            <source src="/img/videos/pexels-nikita-ryumshin-7832341-1080x1920-25fps.mp4" type="video/mp4">
+            Tu navegador no soporta la etiqueta de video.
+          </video>
+          <div class="contenido">
+            <h3 class="title">Hola mundo</h3>
+          </div>
         </div>
-        <div class="caja_video">
-          <video src="/img/"></video>
-        </div>
-      </section>
-      <section id="section-5">
+        
+      </section> -->
+      <!-- <section id="section-5">
         <h3 class="title">Con nosotros, son solo tres simples pasos</h3>
         <div class="pasosContainer">
           <div class="pasos" data-aos="fade-up" data-aos-duration="2000">
@@ -365,7 +376,7 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer class="footer">
       <div class="footer__container">
