--- a/index.html
+++ b/index.html
@@ -19,125 +19,125 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   </head>
   <body>
+
+        <header>
+          <nav id="nav" class="scrollmagic">
+            <div class="logo" id="logo1">
+              <a href="index.html"><img src="/img/logo/logoblanco.svg" alt="" class="logo_nav"></a>
+            </div>
+            <div class="menu-toggle" data-js="menu-toggle">
+              <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <div class="cross">
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+          </nav>
+          <div class="menu">
+            <h2 class="title_menu">Menú</h2>
+            <ul class="ul_manu">
+              <li class="li_menu" ><a href="#">Enlace 1</a></li>
+              <li class="li_menu"><a href="#">Enlace 2</a></li>
+              <li class="li_menu"><a href="#">Enlace 2</a></li>
+              <li class="li_menu"><a href="#">Enlace 2</a></li>
+            </ul>
+          </div>
+        </header> 
+
     <div id="preloader">
       <img src="/img/svg/faviconRecurso 42.svg" alt="" id="loader" />
     </div>
-    <header> 
-      <nav id="nav" class="scrollmagic">
-          <div class="logo" id="logo1">
-            <a href="index.html"><img src="/img/logo/logoblanco.svg" alt="" class="logo_nav"></a>
-          </div>
-      </nav>
-      <div class="content_btf">
-          <button class="shareButton main_btf" id="shareButtonJS">
-            <svg class="share" style="width:24px;height:24px" viewBox="0 0 24 24"><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"/></svg>
-        <svg class="check" style="width:24px;height:24px" viewBox="0 0 24 24">    <path  d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>
-        <svg class="close" style="width:24px;height:24px" viewBox="0 0 24 24">
-        <path d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" /></svg>
-          </button>
-          <button class="shareButton fb">
-            <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path d="M7.253 18.494l.724.423A7.953 7.953 0 0 0 12 20a8 8 0 1 0-8-8c0 1.436.377 2.813 1.084 4.024l.422.724-.653 2.401 2.4-.655zM2.004 22l1.352-4.968A9.954 9.954 0 0 1 2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10a9.954 9.954 0 0 1-5.03-1.355L2.004 22zM8.391 7.308c.134-.01.269-.01.403-.004.054.004.108.01.162.016.159.018.334.115.393.249.298.676.588 1.357.868 2.04.062.152.025.347-.093.537a4.38 4.38 0 0 1-.263.372c-.113.145-.356.411-.356.411s-.099.118-.061.265c.014.056.06.137.102.205l.059.095c.256.427.6.86 1.02 1.268.12.116.237.235.363.346.468.413.998.75 1.57 1l.005.002c.085.037.128.057.252.11.062.026.126.049.191.066a.35.35 0 0 0 .367-.13c.724-.877.79-.934.796-.934v.002a.482.482 0 0 1 .378-.127c.06.004.121.015.177.04.531.243 1.4.622 1.4.622l.582.261c.098.047.187.158.19.265.004.067.01.175-.013.373-.032.259-.11.57-.188.733a1.155 1.155 0 0 1-.21.302 2.378 2.378 0 0 1-.33.288 3.71 3.71 0 0 1-.125.09 5.024 5.024 0 0 1-.383.22 1.99 1.99 0 0 1-.833.23c-.185.01-.37.024-.556.014-.008 0-.568-.087-.568-.087a9.448 9.448 0 0 1-3.84-2.046c-.226-.199-.435-.413-.649-.626-.89-.885-1.562-1.84-1.97-2.742A3.47 3.47 0 0 1 6.9 9.62a2.729 2.729 0 0 1 .564-1.68c.073-.094.142-.192.261-.305.127-.12.207-.184.294-.228a.961.961 0 0 1 .371-.1z"></path> </svg></button>
-          <button class="shareButton tw">
-            <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path d="M12 9.55C12.917 8.613 14.111 8 15.5 8a5.5 5.5 0 0 1 5.5 5.5V21h-2v-7.5a3.5 3.5 0 0 0-7 0V21h-2V8.5h2v1.05zM5 6.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm-1 2h2V21H4V8.5z"></path> </svg></button>
-          <button class="shareButton ig">
-            <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path d="M5.883 18.653c-.3-.2-.558-.455-.86-.816a50.32 50.32 0 0 1-.466-.579c-.463-.575-.755-.84-1.057-.949a1 1 0 0 1 .676-1.883c.752.27 1.261.735 1.947 1.588-.094-.117.34.427.433.539.19.227.33.365.44.438.204.137.587.196 1.15.14.023-.382.094-.753.202-1.095C5.38 15.31 3.7 13.396 3.7 9.64c0-1.24.37-2.356 1.058-3.292-.218-.894-.185-1.975.302-3.192a1 1 0 0 1 .63-.582c.081-.024.127-.035.208-.047.803-.123 1.937.17 3.415 1.096A11.731 11.731 0 0 1 12 3.315c.912 0 1.818.104 2.684.308 1.477-.933 2.613-1.226 3.422-1.096.085.013.157.03.218.05a1 1 0 0 1 .616.58c.487 1.216.52 2.297.302 3.19.691.936 1.058 2.045 1.058 3.293 0 3.757-1.674 5.665-4.642 6.392.125.415.19.879.19 1.38a300.492 300.492 0 0 1-.012 2.716 1 1 0 0 1-.019 1.958c-1.139.228-1.983-.532-1.983-1.525l.002-.446.005-.705c.005-.708.007-1.338.007-1.998 0-.697-.183-1.152-.425-1.36-.661-.57-.326-1.655.54-1.752 2.967-.333 4.337-1.482 4.337-4.66 0-.955-.312-1.744-.913-2.404a1 1 0 0 1-.19-1.045c.166-.414.237-.957.096-1.614l-.01.003c-.491.139-1.11.44-1.858.949a1 1 0 0 1-.833.135A9.626 9.626 0 0 0 12 5.315c-.89 0-1.772.119-2.592.35a1 1 0 0 1-.83-.134c-.752-.507-1.374-.807-1.868-.947-.144.653-.073 1.194.092 1.607a1 1 0 0 1-.189 1.045C6.016 7.89 5.7 8.694 5.7 9.64c0 3.172 1.371 4.328 4.322 4.66.865.097 1.201 1.177.544 1.748-.192.168-.429.732-.429 1.364v3.15c0 .986-.835 1.725-1.96 1.528a1 1 0 0 1-.04-1.962v-.99c-.91.061-1.662-.088-2.254-.485z"></path></svg></button>
-      </div>
-  </header>
     <main>
-      <div class="progress-bar-container" id="progress_JS">
-        <div class="progress-bar-text">
-          <a class="linkNav" href="#section-1"><span>Home</span></a>
-          <a class="linkNav" href="#section-2"><span>Servicios</span></a>
-          <a class="linkNav" href="#section-3"><span>Contacto</span></a>
-          <a class="linkNav" href="#section-4"><span>Ayuda</span></a>
-        </div>
-      </div>
       <section id="section-1">
-        <div id="carouselExampleCaptions" class="carousel slide" data-interval="1000" data-ride="carousel" data-speed="500">
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide-to="0"
-              class="active slider"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide-to="2"
-              aria-label="Slide 3"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide-to="3"
-              aria-label="Slide 4"
-            ></button>
+          <div id="carouselExampleCaptions" class="carousel slide" data-interval="1000" data-ride="carousel" data-speed="500">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="0"
+                class="active slider"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="3"
+                aria-label="Slide 4"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item h-100 active">
+                <video src="/img/videos/pexels-pachon-in-motion-15439750-1080x1920-30fps.mp4" class="img_carousel " preload muted autoplay loop></video>
+                <div class="carousel-caption d-md-block">
+                <div class="caja__textos">
+                    <h5 class="title_section1">
+                      <div class="title__active" id="text_rotate"></div>
+                    </h5>
+                    <p class="text">
+                      <span class="text__active">Servicios</span> que se adaptan a<span class="text__active"><br>tus</span> necesidades
+                    </p>
+                    <a href="/nosotros.html" class="cta">Nuestros servicios</a>
+                </div>
+              </div>
+              </div>
+              <div class="carousel-item h-100">
+                <video src="/img/videos/brazozzom.mp4" class="img_carousel " preload muted autoplay loop></video>
+                <div class="carousel-caption d-md-block">
+                  <div class="caja__textos">
+                    <h5 class="title_section1">
+                      <span class="text__active">Robots 4 people</span>
+                    </h5>
+                    <p class="text">El futuro al alcance de todos</p>
+                    <a href="/nosotros.html" class="cta">Conoce 4teen</a>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item h-100">
+                <video src="/img/videos/pexels-pachon-in-motion-15439756-720x1280-30fps.mp4" class="img_carousel " preload muted autoplay loop></video>
+                <div class="carousel-caption d-md-block">
+                  <div class="caja__textos">
+                    <h5 class="title_section1">
+                      <span class="text__active">+</span> que unas lineas
+                      de codigo
+                    </h5>
+                    <p class="text">Conoce nuestra filosofía</p>
+                    <a href="/nosotros.html" class="cta">Nuestros servicios</a>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item h-100">
+                <video src="/img/videos/production ID_4645399.mp4" class="img_carousel " preload muted autoplay loop></video>
+                <div class="carousel-caption d-md-block">
+                  <div class="caja__textos">
+                    <h5 class="title_section1">
+                      <span class="text__active">Clean & scalable code</span>
+                    </h5>
+                    <p class="text">
+                      <span class="text__active">Codigo limpio</span> y buenas<br>practicas
+                    </p>
+                    <a href="/nosotros.html" class="cta">Nuestros servicios</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <video src="/img/videos/pexels-pachon-in-motion-15439750-1080x1920-30fps.mp4" class="img_carousel d-block" preload muted autoplay loop></video>
-              <div class="carousel-caption d-md-block">
-              <div class="caja__textos">
-                  <h5 class="title_section1">
-                    <div class="title__active" id="text_rotate"></div>
-                  </h5>
-                  <p class="text">
-                    <span class="text__active">Servicios</span> que se adaptan a<span class="text__active"><br>tus</span> necesidades
-                  </p>
-                  <a href="/nosotros.html" class="cta">Nuestros servicios</a>
-              </div>
-            </div>
-            </div>
-            <div class="carousel-item">
-              <video src="/img/videos/brazozzom.mp4" class="img_carousel d-block" preload muted autoplay loop></video>
-              <div class="carousel-caption d-md-block">
-                <div class="caja__textos">
-                  <h5 class="title_section1">
-                    <span class="text__active">Robots 4 people</span>
-                  </h5>
-                  <p class="text">El futuro al alcance de todos</p>
-                  <a href="/nosotros.html" class="cta">Conoce 4teen</a>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <video src="/img/videos/pexels-pachon-in-motion-15439756-720x1280-30fps.mp4" class="img_carousel d-block" preload muted autoplay loop></video>
-              <div class="carousel-caption d-md-block">
-                <div class="caja__textos">
-                  <h5 class="title_section1">
-                    <span class="text__active">+</span> que unas lineas
-                    de codigo
-                  </h5>
-                  <p class="text">Conoce nuestra filosofía</p>
-                  <a href="/nosotros.html" class="cta">Nuestros servicios</a>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <video src="/img/videos/production ID_4645399.mp4" class="img_carousel d-block" preload muted autoplay loop></video>
-              <div class="carousel-caption d-md-block">
-                <div class="caja__textos">
-                  <h5 class="title_section1">
-                    <span class="text__active">Clean & scalable code</span>
-                  </h5>
-                  <p class="text">
-                    <span class="text__active">Codigo limpio</span> y buenas<br>practicas
-                  </p>
-                  <a href="/nosotros.html" class="cta">Nuestros servicios</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </section>
       <section id="section-2">
         <div class="section_container" data-aos="fade" data-aos-duration="2000">
@@ -494,5 +494,6 @@
     <script defer src="js/scroll.js"></script>
     <script src="/js/gradient.js"></script>
     <script src="/js/cards.js"></script>
+    <script src="/js/menu.js"></script>
   </body>
 </html>
